--- a/templates/user/partial-user.tmpl
+++ b/templates/user/partial-user.tmpl
@@ -2,4 +2,5 @@
   {{.ID}}: 
   <a href="/user/{{.ID}}">{{.Name}}</a>
   at {{.Email}}
-  (created {{ RelativeTime .CreatedAt }} :: {{ DateOnly .CreatedAt }})</li>
+  (created {{ RelativeTime .CreatedAt }} :: {{ DateOnly .CreatedAt }})
+</li>
