--- a/templates/user/read.tmpl
+++ b/templates/user/read.tmpl
@@ -11,8 +11,7 @@
 
 <p>Update:</p>
 {{template "user/partial-form" .User}}
-
-<a href="/user/{{.User.ID}}/delete">DELETE ME</a>
+<p><a href="/user/{{.User.ID}}/delete">DELETE ME</a></p>
 
 {{template "include/footer"}}
 
