--- a/templates/user/read.tmpl
+++ b/templates/user/read.tmpl
@@ -6,7 +6,11 @@
 
 <p>
   Peep:
-  <ul>{{template "user/partial-user" .User}}</ul>
+  <table>
+  <tbody>
+  {{template "user/partial-user" .User}}
+  </tbody>
+  </table>
 </p>
 
 <p>Update:</p>
