--- a/templates/user/partial-user.tmpl
+++ b/templates/user/partial-user.tmpl
@@ -1,6 +1,7 @@
-<li>
-  {{.ID}}: 
-  <a href="/user/{{.ID}}">{{.Name}}</a>
-  at {{.Email}}
-  (created {{ RelativeTime .CreatedAt }} :: {{ DateOnly .CreatedAt }})
-</li>
+<tr>
+  <td>{{.ID}}</td>
+  <td><a href="/user/{{.ID}}">{{.Name}}</a></td>
+  <td>{{.Email}}</td>
+  <td>created {{ RelativeTime .CreatedAt }}</td>
+  <td>{{ DateOnly .CreatedAt }}</td>
+</tr>
