--- a/templates/include/header.tmpl
+++ b/templates/include/header.tmpl
@@ -1,6 +1,18 @@
 <html>
   <head>
   <title>User</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
-<body>
+<body class="bg-dark">
+
+<div class="container bg-light" style="height: 100%">
+
+  <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/">Skeleton</a>
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item"><a class="nav-link" aria-current="page" href="/users">Peeps</a></li>
+      </ul>
+    </div>
+  </nav>
 
