--- a/templates/include/header.tmpl
+++ b/templates/include/header.tmpl
@@ -6,6 +6,9 @@
 </head>
 <body class="bg-dark">
 
+{{end}}
+{{.Boosted}}
+
 <div class="container bg-light" style="height: 100%">
 
   <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
@@ -16,5 +19,4 @@
       </ul>
     </div>
   </nav>
-{{end}}
 
