--- a/templates/user/index.tmpl
+++ b/templates/user/index.tmpl
@@ -1,4 +1,4 @@
-{{template "include/header"}}
+{{template "include/header" .}}
 
 <h3>Peeps</h3>
 <p>
@@ -14,5 +14,5 @@
 <h3>Create new user:</h3>
 {{template "user/partial-form"}}
 
-{{template "include/footer"}}
+{{template "include/footer" .}}
 
