--- a/templates/include/header.tmpl
+++ b/templates/include/header.tmpl
@@ -11,11 +11,12 @@
 
 <div class="container bg-light" style="height: 100%">
 
-  <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
+  <nav class="navbar bg-dark navbar-expand-lg border-bottom border-body" data-bs-theme="dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">Skeleton</a>
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item"><a class="nav-link" aria-current="page" href="/users">Peeps</a></li>
+        <li class="nav-item"><a class="nav-link{{if .Users}} active{{end}}" aria-current="page" href="/users">Peeps</a></li>
+        {{if .User}}<li class="nav-item"><a class="nav-link active" aria-current="page" href="/users{{.User.ID}}">Peep: {{.User.Name}}</a></li>{{end}}
       </ul>
     </div>
   </nav>
