--- a/templates/include/header.tmpl
+++ b/templates/include/header.tmpl
@@ -1,7 +1,7 @@
 {{if not .Boosted}}
 <html>
   <head>
-  <title>User</title>
+  <title>Skeleton with Users</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
    <script src="https://unpkg.com/htmx.org@1.9.4"></script>
 </head>
@@ -15,7 +15,7 @@
       <a class="navbar-brand" href="/">Skeleton</a>
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item"><a class="nav-link{{if .Users}} active{{end}}" aria-current="page" href="/users">Peeps</a></li>
-        {{if .User}}<li class="nav-item"><a class="nav-link active" aria-current="page" href="/users/{{.User.ID}}">Peep: {{.User.Name}}</a></li>{{end}}
+        {{if .User}}<li class="nav-item"><a class="nav-link active" aria-current="page" href="/user/{{.User.ID}}">Peep: {{.User.Name}}</a></li>{{end}}
       </ul>
     </div>
   </nav>
