--- a/templates/user/partial-form.tmpl
+++ b/templates/user/partial-form.tmpl
@@ -1,6 +1,12 @@
 
 <p>
-  <form method="post" action="/user{{if .ID}}/{{.ID}}{{end}}">
+  <form method="post" 
+        {{if .ID}}
+        action="/user/{{.ID}}" hx-target="#user" hx-swap="innerHTML"
+        {{else}}
+        action="/user" hx-target="#userlist" hx-swap="beforeend"
+        {{end}}
+      >
     <input name="name" type="text" placeholder="name"{{if .Name}} value="{{.Name}}"{{end}} />
     <input name="email" type="text" placeholder="email"{{if .Email}} value="{{.Email}}"{{end}} />
     <input type="submit" />
