--- a/templates/user/read.tmpl
+++ b/templates/user/read.tmpl
@@ -4,7 +4,7 @@
 
 <p>
   <table class="table table-sm">
-  <tbody>
+  <tbody id="user">
   {{template "user/partial-user" .User}}
   </tbody>
   </table>
