Fadeout for delete on table.

--- a/templates/include/header.tmpl
+++ b/templates/include/header.tmpl
@@ -6,6 +6,7 @@
    <script src="https://unpkg.com/htmx.org@1.9.4"></script>
    <style>
       button.delete-btn { --bs-btn-padding-y: 0rem; }
+      .fadeout.htmx-swapping { opacity: 0; transition: opacity 0.4s ease-out; }
    </style>
 </head>
 <body class="bg-dark" hx-boost="true">
