--- a/templates/user/read.tmpl
+++ b/templates/user/read.tmpl
@@ -12,7 +12,7 @@
 
 <h3>Update</h3>
 {{template "user/partial-form" .User}}
-<a class="btn btn-outline-danger" href="/user/{{.User.ID}}/delete">Delete User</a>
+<a class="btn btn-outline-danger" href="/user/{{.User.ID}}/delete" hx-confirm="Are you sure you want to delete this user?">Delete User</a>
 
 <style>
   td.delete { visibility: hidden; }
