--- a/templates/user/read.tmpl
+++ b/templates/user/read.tmpl
@@ -5,13 +5,13 @@
 <p>
   <table class="table table-sm">
   <tbody id="user">
-  {{template "user/partial-user" .User}}
+  {{template "user/fragment-row" .User}}
   </tbody>
   </table>
 </p>
 
 <h3>Update</h3>
-{{template "user/partial-form" .User}}
+{{template "user/fragment-form" .User}}
 <a class="btn btn-outline-danger" href="/user/{{.User.ID}}/delete" hx-confirm="Are you sure you want to delete this user?">Delete User</a>
 
 <style>
