--- a/templates/user/index.tmpl
+++ b/templates/user/index.tmpl
@@ -4,16 +4,20 @@
 {{template "user/fragment-form"}}
 
 <h3>Peeps</h3>
-<form hx-include="[name]" hx-target="#userlist">
-  <input name="page" value="1" type="hidden" />
-  <div class="row">
+<form method="get" action="/users" onsubmit="event.preventDefault(); return false;">
+  <div class="row" hx-include="[name]" hx-target="#userlist">
+    <input name="page" value="1" type="hidden" />
     <div class="col">
-      <input type="text" class="form-control" placeholder="Search..." name="search" hx-trigger="keyup changed delay:.5s" hx-get="/users.partial"/>
+      <input id="searchfield" type="text" class="form-control" placeholder="Search..." name="search" tabindex="1"
+             hx-trigger="keyup changed delay:500ms" 
+             hx-get="/users.partial" 
+             {{if .Pagination.Search}} value="{{.Pagination.Search}}"{{end}} />
     </div>
     <div class="col">
-      <select class="form-select" name="perpage" hx-trigger="change" hx-get="/users.partial">
-        <option value="5" selected>5</option>
-        <option value="10">10</option>
+      <select class="form-select" name="perpage" hx-trigger="change" hx-get="/users.partial" tabindex="2">
+        <option value="5"{{if eq .Pagination.PerPage 5}} selected{{end}}>5</option>
+        <option value="10"{{if eq .Pagination.PerPage 10}} selected{{end}}>10</option>
+        <option value="20"{{if eq .Pagination.PerPage 20}} selected{{end}}>20</option>
       </select>
     </div>
   </div>
@@ -23,7 +27,7 @@
     <tbody id="userlist">
       <tr><td colspan="0">
         <div class="text-center" 
-            hx-get="/users.partial?page=1" 
+            hx-get="{{BuildPagingURI .Pagination.URI .Pagination.CurrentPage .Pagination.PerPage .Pagination.Search}}" 
             hx-target="closest tr" 
             hx-swap="outerHTML" 
             hx-trigger="load">Loading...</div>
@@ -42,5 +46,9 @@
   </table>
   {{template "include/paginate" .Pagination}} -->
 </p>
+
+<script type="text/javascript">
+  document.body.addEventListener('htmx:load', function(evt) { document.getElementById("searchfield").focus(); });
+</script>
 
 {{template "include/footer" .}}
